Clarified language for Process .fasta checkbox

--- a/phylobook/projects/templates/upload_files.html
+++ b/phylobook/projects/templates/upload_files.html
@@ -46,7 +46,7 @@
                     <input type="hidden" id="project_type" name="project_type">
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" id="process_fasta" name="process_fasta" value=1 checked>
-                        <label class="form-check-label" for="process_fasta">Process .fasta files on upload</label>
+                        <label class="form-check-label" for="process_fasta">Process .fasta files with the pipeline on upload</label>
                     </div>
                 </form>
                 <br>
