Updated requirements.txt to remove unsafe and unused requirements, and set versions that are missing.

--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -94,8 +94,8 @@
                         Processes
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="processCloseButton">Close</button>
-                        <button type="button" class="btn btn-primary" id="processModalRefreshButton">Refresh</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" id="processCloseButton" aria-label="Close">Close</button>
+                        <button type="button" class="btn btn-primary" id="processModalRefreshButton" aria-label="Refresh">Refresh</button>
                     </div>
                 </div>
             </div>
